Update hari ini

--- a/Section-5-Instance/1.index-v-67-74.html
+++ b/Section-5-Instance/1.index-v-67-74.html
@@ -36,7 +36,18 @@
                         Change The 1st Title
                     </a>
                 </p>
-            </div>     
+            </div>
+            
+            <div id="app3">
+            </div>
+
+            <!-- Using component -->
+            <div id="app4">
+                <p class="text-lg text-center mt-5 capitalize">Using Component</p>
+                <helo></helo>
+                <helo></helo>
+                <helo></helo>
+            </div>
         </div>
     </div>    
 </body>
