--- a/Section-02-Interact-with-DOM/5.index-v-29-33.html
+++ b/Section-02-Interact-with-DOM/5.index-v-29-33.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-300">
     <div id="app">
-        <div class="h-screen flex items-center justify-center">
+        <div class="h-screen flex items-center justify-center mt-40">
             <div class="w-full max-w-md bg-white p-10">
                 <div class="text-4xl font-light capitalize mb-8 text-center">interact with dom</div>
 
